src/objects/Licenza__c.object
<CustomObject>
    <fields>
        <fullName>AttivaCheckbox__c</fullName>
        <formula>AND( Contratto__r.AttivoCheckbox__c , NOT( Disattiva__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attiva Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attiva__c</fullName>
        <formula>IMAGE(
IF( AttivaCheckbox__c , &quot;/resource/icone/Altre/green_light.png&quot;,&quot;/resource/icone/Altre/red_light.png&quot;),&quot;&quot;,25,25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attiva?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChiamateAnnuali__c</fullName>
        <label>Chiamate Annuali</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChiamateMensili__c</fullName>
        <label>Chiamate Mensili</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChiamateTotali__c</fullName>
        <label>Chiamate Totali</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contratto__c</fullName>
        <label>Contratto</label>
        <referenceTo>Contratto__c</referenceTo>
        <relationshipLabel>Licenze</relationshipLabel>
        <relationshipName>Licenza</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Disattiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disattiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdUtenteCliente__c</fullName>
        <externalId>true</externalId>
        <label>Id Utente Cliente</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Licenza</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Numero Licenza</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenze</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>